# file-upload

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  Rocket.toml  build-docker-image.sh  build.sh
src/: index.html  main.rs
templates/: base.html.tera  index.html.tera  message.html.tera
